[workspace]
members = [
  "crates/guard-core",
  "apps/guard-desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.8.5" }
tauri-build = { version = "2.5.1" }
